--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,10 @@
 /*
  * @Description: general styles
- * @Version: 1.1.9.20220303
+ * @Version: 1.1.10.20220304
  * @Author: Arvin Zhao
  * @Date: 2021-12-06 22:03:43
  * @Last Editors: Arvin Zhao
- * @LastEditTime: 2022-03-03 23:29:16
+ * @LastEditTime: 2022-03-04 09:06:20
  */
 
 @tailwind base;
@@ -201,11 +201,6 @@
   font-size: 14px !important;
 }
 
-/* The customised horizontal scroll bar style. */
-.e-hscroll .e-scroll-nav {
-  @apply non-draggable-area !bg-gray-700;
-}
-
 /* Force the pop-up height and position to be fixed. */
 .e-popup-fixed {
   @apply !fixed !max-h-fit;
@@ -216,7 +211,12 @@
   @apply !hidden;
 }
 
-/* The customised tab scroll bar style. */
+/* The customised horizontal tab scroll bar navigation style. */
+.e-tab .e-tab-header .e-hscroll .e-scroll-nav {
+  @apply non-draggable-area !bg-gray-700;
+}
+
+/* The customised horizontal tab scroll bar navigation arrow style. */
 .e-tab
   .e-tab-header
   .e-hscroll:not(.e-scroll-device)
@@ -226,7 +226,7 @@
   @apply !text-gray-400;
 }
 
-/* The customised tab scroll bar style on hover and focus.  */
+/* The customised horizontal tab scroll bar style on hover and focus.  */
 .e-tab .e-tab-header .e-hscroll:not(.e-scroll-device) .e-scroll-nav:focus,
 .e-tab
   .e-tab-header
